# rop-stage-classification

./: .gitattributes  .gitignore  CHAMPION_RESULTS.md  README.md  RESULTS.md  V2_RESULTS.md  _build_champ_nb.py  _build_report_notebook.py  overview.md  pyproject.toml  rop-stage-classification-bravi-fixed.ipynb  rop-stage-classification-champ.ipynb  rop-stage-classification-champ.ipynb.bak  rop-stage-classification-champ.ipynb.prefull.bak  rop-stage-classification.ipynb  vessel_segmentation_gabor_clahe.py
docs/: gabor_clahe_p10_pipeline.md
experiments/: README.md  VESSEL_FINDINGS.md  attach_honest_cv.py  champion_cldice.py  champion_overlay.py  clean_manifest.json  friend_gabor_p10.py  masked_cnn_cv.py  masked_cnn_cv_champion.py  masked_cnn_cv_honest.py  masked_cnn_cv_v2.py  masked_cnn_cv_v3.py  masked_cnn_weight_sweep.py  novel_approaches.py  overlay_config_metrics.py  overlay_tune.py  rop_classical.py  rop_experiment.py  rop_ridge_classical.py  rop_ridge_unet.py  rop_ssl.py  rop_training.py  round2.py  round3.py  round4.py  round5.py  round6.py  round7.py  run_experiments.py  run_zfc.py  show_thresholds.py  test_enhancements.py  train_local.py  train_unet.py  tv_denoise_enhencement.py  vessel_eval.py  vessel_gabor_tune.py  vessel_modal.py  vessel_round4.py  vessel_round5.py  (+4 more)
report/: .gitignore  Makefile  README.md  main.tex
results/: CHAMPION_RESULTS.md  FINAL_RESULT.md  RESULTS.md  V2_RESULTS.md  V3_RESULTS.md
scripts/: almeida_workflow_visualization.py  astar_reconnection_visualization.py  gabor_clahe_workflow_visualization.py  pre_hysteresis_visualization.py  (+6 more)
(+124 files in other folders)
